--- a/client/src/assests/css/admin.css
+++ b/client/src/assests/css/admin.css
@@ -1,5 +1,6 @@
 .Admin .container {
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
 }
@@ -10,9 +11,11 @@
 
 .Admin .container .top-row {
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
+  -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between;
   padding: 20px 0;
@@ -30,6 +33,7 @@
 
 .Admin .container .top-row .numbers {
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
 }
@@ -76,4 +80,3 @@
 .AdminClusterEmail .mail-box .main-body textarea:focus {
   outline: none;
 }
-/*# sourceMappingURL=admin.css.map */
