--- a/client/src/assests/css/paymentConfirm.css
+++ b/client/src/assests/css/paymentConfirm.css
@@ -28,11 +28,15 @@ li {
 
 button:focus {
   -webkit-transform: translateY(0px);
+      -ms-transform: translateY(0px);
+       -o-transform: translateY(0px);
           transform: translateY(0px);
 }
 
 button:active {
   -webkit-transform: translateY(3px);
+      -ms-transform: translateY(3px);
+       -o-transform: translateY(3px);
           transform: translateY(3px);
 }
 
@@ -51,6 +55,8 @@ ul {
 
 button.MuiButtonBase-root:active {
   -webkit-transform: none;
+      -ms-transform: none;
+       -o-transform: none;
           transform: none;
 }
 
@@ -94,6 +100,7 @@ button.MuiButtonBase-root:active {
 
 .TeamInformations {
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   border: 1px solid #c5c5c5;
@@ -111,6 +118,7 @@ button.MuiButtonBase-root:active {
   .TeamInformations {
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
+    -webkit-flex-direction: column-reverse;
         -ms-flex-direction: column-reverse;
             flex-direction: column-reverse;
   }
@@ -131,6 +139,7 @@ button.MuiButtonBase-root:active {
   padding: 0;
   margin: 0;
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   padding-bottom: 1.35rem;
@@ -140,6 +149,7 @@ button.MuiButtonBase-root:active {
   .TeamInformations .TeamDetails .td {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
+    -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
   }
@@ -149,34 +159,39 @@ button.MuiButtonBase-root:active {
   font-weight: 700;
   font-size: 25px;
   letter-spacing: 0.1;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  -webkit-align-self: center;
+      -ms-flex-item-align: center;
+              -ms-grid-row-align: center;
+          align-self: center;
 }
 
 .TeamInformations .TeamDetails .td p:last-child {
-  -ms-flex-item-align: end;
-      align-self: flex-end;
+  -webkit-align-self: flex-end;
+      -ms-flex-item-align: end;
+          align-self: flex-end;
   font-size: 20px;
   padding-left: 1rem;
 }
 
 @media (max-width: 500px) {
   .TeamInformations .TeamDetails .td p:last-child {
-    -ms-flex-item-align: start;
-        align-self: flex-start;
+    -webkit-align-self: flex-start;
+        -ms-flex-item-align: start;
+            align-self: flex-start;
     padding-left: 0rem;
   }
 }
 
 .RegFee {
   -webkit-box-flex: 1;
+  -webkit-flex: 1;
       -ms-flex: 1;
           flex: 1;
   text-align: center;
-  -ms-flex-item-align: center;
-      -ms-grid-row-align: center;
-      align-self: center;
+  -webkit-align-self: center;
+      -ms-flex-item-align: center;
+              -ms-grid-row-align: center;
+          align-self: center;
   font-size: 30px;
 }
 
@@ -188,7 +203,7 @@ button.MuiButtonBase-root:active {
 }
 
 .RegFee p:first-child {
-  font-size: 28px;
+  font-size: 34px;
   padding-bottom: 1.4rem;
 }
 
@@ -200,7 +215,7 @@ button.MuiButtonBase-root:active {
 }
 
 .RegFee p:last-child {
-  font-size: 34px;
+  font-size: 40px;
   font-weight: 400;
 }
 
@@ -209,4 +224,3 @@ button.MuiButtonBase-root:active {
     font-size: 20px;
   }
 }
-/*# sourceMappingURL=paymentConfirm.css.map */
