--- a/client/src/assests/css/adminTeams.css
+++ b/client/src/assests/css/adminTeams.css
@@ -28,11 +28,15 @@ li {
 
 button:focus {
   -webkit-transform: translateY(0px);
+      -ms-transform: translateY(0px);
+       -o-transform: translateY(0px);
           transform: translateY(0px);
 }
 
 button:active {
   -webkit-transform: translateY(3px);
+      -ms-transform: translateY(3px);
+       -o-transform: translateY(3px);
           transform: translateY(3px);
 }
 
@@ -51,6 +55,8 @@ ul {
 
 button.MuiButtonBase-root:active {
   -webkit-transform: none;
+      -ms-transform: none;
+       -o-transform: none;
           transform: none;
 }
 
@@ -107,4 +113,3 @@ button.MuiButtonBase-root:active {
     width: 98%;
   }
 }
-/*# sourceMappingURL=adminTeams.css.map */
