--- a/client/src/assests/css/followUsButton.css
+++ b/client/src/assests/css/followUsButton.css
@@ -9,20 +9,25 @@
   max-width: 280px;
   border-radius: 6px;
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
 }
 
 .button_container:hover {
   -webkit-transform: translateY(-2px);
+      -ms-transform: translateY(-2px);
+       -o-transform: translateY(-2px);
           transform: translateY(-2px);
 }
 
 .button_container .icon_container {
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
+  -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
 }
@@ -33,13 +38,16 @@
 
 .button_container .follow_us_container {
   display: -webkit-box;
+  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
+  -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
   -webkit-box-pack: center;
+  -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
   padding-top: 5px;
@@ -57,4 +65,3 @@
   font-size: 28px;
   color: #2e519c;
 }
-/*# sourceMappingURL=followUsButton.css.map */
