--- a/client/src/assests/css/sass/contact.scss
+++ b/client/src/assests/css/sass/contact.scss
@@ -250,6 +250,20 @@
       width: 95%;
     }
 
+    .auto-suggest {
+      padding: 15px;
+      cursor: pointer;
+              background-color: #fff;
+              width: 100%;
+              font-size: 18px;
+              border: 1px solid #ccc;
+              border-radius: 10px;
+              @media (max-width: 600px) {
+                padding: 10px;
+                font-size: 13.5px;
+              }
+    }
+
     .EmailContents {
       width: 70%;
       margin: auto;
