--- a/client/src/assests/css/sass/home.scss
+++ b/client/src/assests/css/sass/home.scss
@@ -372,6 +372,11 @@
         li {
           list-style-image: url("data:image/svg+xml;utf8,<svg xmlns='http://www.w3.org/2000/svg' width='8' height='8' viewBox='-1 -1 2 2'><circle r='1' /></svg>");
           font-size: 1.6rem;
+          &:not(:last-child) {
+            padding-bottom: 5px;
+            margin-bottom: 7px;
+            border-bottom: 1px solid gray;
+          }
         }
       }
       a {
