--- a/client/src/assests/css/adminTeams.css
+++ b/client/src/assests/css/adminTeams.css
@@ -28,15 +28,11 @@ li {
 
 button:focus {
   -webkit-transform: translateY(0px);
-      -ms-transform: translateY(0px);
-       -o-transform: translateY(0px);
           transform: translateY(0px);
 }
 
 button:active {
   -webkit-transform: translateY(3px);
-      -ms-transform: translateY(3px);
-       -o-transform: translateY(3px);
           transform: translateY(3px);
 }
 
@@ -55,8 +51,6 @@ ul {
 
 button.MuiButtonBase-root:active {
   -webkit-transform: none;
-      -ms-transform: none;
-       -o-transform: none;
           transform: none;
 }
 
@@ -113,3 +107,51 @@ button.MuiButtonBase-root:active {
     width: 98%;
   }
 }
+
+.top-row {
+  display: -webkit-box;
+  display: -ms-flexbox;
+  display: flex;
+  -webkit-box-pack: justify;
+      -ms-flex-pack: justify;
+          justify-content: space-between;
+  white-space: nowrap;
+  padding: 30px 0;
+}
+
+@media (max-width: 900px) {
+  .top-row {
+    -webkit-box-orient: vertical;
+    -webkit-box-direction: normal;
+        -ms-flex-direction: column;
+            flex-direction: column;
+  }
+}
+
+.top-row .left {
+  width: 50%;
+  padding: 15px;
+}
+
+@media (max-width: 900px) {
+  .top-row .left {
+    width: 100%;
+  }
+}
+
+.top-row .right {
+  width: 30%;
+}
+
+@media (max-width: 1200px) {
+  .top-row .right {
+    width: 48%;
+  }
+}
+
+@media (max-width: 900px) {
+  .top-row .right {
+    width: 100%;
+  }
+}
+/*# sourceMappingURL=adminTeams.css.map */
