--- a/client/src/assests/css/contact.css
+++ b/client/src/assests/css/contact.css
@@ -28,15 +28,11 @@ li {
 
 button:focus {
   -webkit-transform: translateY(0px);
-      -ms-transform: translateY(0px);
-       -o-transform: translateY(0px);
           transform: translateY(0px);
 }
 
 button:active {
   -webkit-transform: translateY(3px);
-      -ms-transform: translateY(3px);
-       -o-transform: translateY(3px);
           transform: translateY(3px);
 }
 
@@ -55,8 +51,6 @@ ul {
 
 button.MuiButtonBase-root:active {
   -webkit-transform: none;
-      -ms-transform: none;
-       -o-transform: none;
           transform: none;
 }
 
@@ -98,7 +92,6 @@ button.MuiButtonBase-root:active {
 .contactUsForm_flx {
   background: white;
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   border-radius: 10px;
@@ -112,7 +105,6 @@ button.MuiButtonBase-root:active {
   .contactUsForm_flx {
     -webkit-box-orient: vertical;
     -webkit-box-direction: reverse;
-    -webkit-flex-direction: column-reverse;
         -ms-flex-direction: column-reverse;
             flex-direction: column-reverse;
   }
@@ -145,8 +137,6 @@ button.MuiButtonBase-root:active {
   border: none;
   outline: none;
   background: -webkit-gradient(linear, left top, right top, from(#7ed56f), to(#28b485));
-  background: -webkit-linear-gradient(left, #7ed56f, #28b485);
-  background: -o-linear-gradient(left, #7ed56f, #28b485);
   background: linear-gradient(to right, #7ed56f, #28b485);
   color: white;
   border-radius: 4px;
@@ -189,13 +179,6 @@ button.MuiButtonBase-root:active {
   font-family: 'Open Sans';
 }
 
-.contactUsForm_flx_form form .textbox input::-moz-placeholder,
-.contactUsForm_flx_form form .textarea input::-moz-placeholder {
-  font-size: 1.6rem;
-  color: #bbbbbb;
-  font-family: 'Open Sans';
-}
-
 .contactUsForm_flx_form form .textbox input:-ms-input-placeholder,
 .contactUsForm_flx_form form .textarea input:-ms-input-placeholder {
   font-size: 1.6rem;
@@ -219,13 +202,6 @@ button.MuiButtonBase-root:active {
 
 .contactUsForm_flx_form form .textbox textarea::-webkit-input-placeholder,
 .contactUsForm_flx_form form .textarea textarea::-webkit-input-placeholder {
-  font-size: 1.6rem;
-  color: #bbbbbb;
-  font-family: 'Open Sans';
-}
-
-.contactUsForm_flx_form form .textbox textarea::-moz-placeholder,
-.contactUsForm_flx_form form .textarea textarea::-moz-placeholder {
   font-size: 1.6rem;
   color: #bbbbbb;
   font-family: 'Open Sans';
@@ -264,7 +240,6 @@ button.MuiButtonBase-root:active {
   border: none;
   border-bottom: 2px solid #ccc;
   -webkit-transition: border-bottom 0.25s ease;
-  -o-transition: border-bottom 0.25s ease;
   transition: border-bottom 0.25s ease;
   color: #444444;
   font-family: 'Roboto', sans-serif;
@@ -286,8 +261,6 @@ button.MuiButtonBase-root:active {
   width: 50%;
   padding: 4rem 5.3rem;
   background-image: -webkit-gradient(linear, right top, left top, from(#7ed56f), to(#28b485));
-  background-image: -webkit-linear-gradient(right, #7ed56f, #28b485);
-  background-image: -o-linear-gradient(right, #7ed56f, #28b485);
   background-image: linear-gradient(to left, #7ed56f, #28b485);
   border-radius: 0 10px 10px 0;
   color: white;
@@ -319,11 +292,9 @@ button.MuiButtonBase-root:active {
 
 .contactUsForm_flx_contact_info {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: center;
-  -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
   margin-bottom: 3rem;
@@ -333,11 +304,9 @@ button.MuiButtonBase-root:active {
   margin-right: 1.5rem;
   font-size: 2.4rem;
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-align: start;
-  -webkit-align-items: flex-start;
       -ms-flex-align: start;
           align-items: flex-start;
   padding-top: 2px;
@@ -348,9 +317,8 @@ button.MuiButtonBase-root:active {
 }
 
 .contactUsForm_flx_contact_info_des {
-  -webkit-align-self: flex-end;
-      -ms-flex-item-align: end;
-          align-self: flex-end;
+  -ms-flex-item-align: end;
+      align-self: flex-end;
   padding-left: 5px;
 }
 
@@ -470,11 +438,9 @@ button.MuiButtonBase-root:active {
 .EmailBox .EmailPalette .EmailContents .flex-parent {
   margin-top: 40px;
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between;
 }
@@ -483,7 +449,6 @@ button.MuiButtonBase-root:active {
   .EmailBox .EmailPalette .EmailContents .flex-parent {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
     margin: auto;
@@ -581,8 +546,6 @@ button.MuiButtonBase-root:active {
   border: none;
   outline: none;
   background: -webkit-gradient(linear, left top, right top, from(#7ed56f), to(#28b485));
-  background: -webkit-linear-gradient(left, #7ed56f, #28b485);
-  background: -o-linear-gradient(left, #7ed56f, #28b485);
   background: linear-gradient(to right, #7ed56f, #28b485);
   color: white;
   border-radius: 4px;
@@ -597,3 +560,4 @@ button.MuiButtonBase-root:active {
   outline: none;
   border: none;
 }
+/*# sourceMappingURL=contact.css.map */
