--- a/client/src/assests/css/gallery.css
+++ b/client/src/assests/css/gallery.css
@@ -28,15 +28,11 @@ li {
 
 button:focus {
   -webkit-transform: translateY(0px);
-      -ms-transform: translateY(0px);
-       -o-transform: translateY(0px);
           transform: translateY(0px);
 }
 
 button:active {
   -webkit-transform: translateY(3px);
-      -ms-transform: translateY(3px);
-       -o-transform: translateY(3px);
           transform: translateY(3px);
 }
 
@@ -55,8 +51,6 @@ ul {
 
 button.MuiButtonBase-root:active {
   -webkit-transform: none;
-      -ms-transform: none;
-       -o-transform: none;
           transform: none;
 }
 
@@ -103,16 +97,13 @@ button.MuiButtonBase-root:active {
   max-width: 88%;
   margin: auto;
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
 }
 
 @media (max-width: 1700px) {
@@ -156,7 +147,7 @@ button.MuiButtonBase-root:active {
   width: 100%;
   -webkit-transition: -webkit-transform 0.6s;
   transition: -webkit-transform 0.6s;
-  -o-transition: -o-transform 0.6s;
   transition: transform 0.6s;
-  transition: transform 0.6s, -webkit-transform 0.6s, -o-transform 0.6s;
+  transition: transform 0.6s, -webkit-transform 0.6s;
 }
+/*# sourceMappingURL=gallery.css.map */
