--- a/client/src/assests/css/sass/adminTeams.scss
+++ b/client/src/assests/css/sass/adminTeams.scss
@@ -51,3 +51,31 @@
     }
   }
 }
+
+.top-row {
+  display: flex;
+  justify-content: space-between;
+  white-space: nowrap;
+  padding: 30px 0;
+
+  @media (max-width: 900px) {
+    flex-direction: column;
+  }
+
+  .left {
+    width: 50%;
+    padding: 15px;
+    @media (max-width: 900px) {
+      width: 100%;
+    }
+  }
+  .right {
+    width: 30%;
+    @media (max-width: 1200px) {
+      width: 48%;
+    }
+    @media (max-width: 900px) {
+      width: 100%;
+    }
+  }
+}
