--- a/client/src/assests/css/sass/rules.scss
+++ b/client/src/assests/css/sass/rules.scss
@@ -1,17 +1,19 @@
 @import '_main';
 @import '_mixin';
 
-h2 {
-  font-family: 'Libre Franklin', sans-serif;
-  padding: 1.5rem 0.5rem 2rem 0.5rem;
-  text-align: center;
-  font-weight: 600;
-  font-size: 5.5rem;
-  color: #0c3970;
-
-  @media (max-width: 750px) {
-    font-size: 4rem;
-    padding: 0.8rem 0.2rem 2.2rem 0.2rem;
+.each_gallery_header {
+  h2 {
+    font-family: 'Libre Franklin', sans-serif;
+    padding: 1.5rem 0.5rem 2rem 0.5rem;
+    text-align: center;
+    font-weight: 600;
+    font-size: 5.5rem;
+    color: #0c3970;
+  
+    @media (max-width: 750px) {
+      font-size: 4rem;
+      padding: 0.8rem 0.2rem 2.2rem 0.2rem;
+    }
   }
 }
 
