--- a/client/src/assests/css/rules.css
+++ b/client/src/assests/css/rules.css
@@ -28,11 +28,15 @@ li {
 
 button:focus {
   -webkit-transform: translateY(0px);
+      -ms-transform: translateY(0px);
+       -o-transform: translateY(0px);
           transform: translateY(0px);
 }
 
 button:active {
   -webkit-transform: translateY(3px);
+      -ms-transform: translateY(3px);
+       -o-transform: translateY(3px);
           transform: translateY(3px);
 }
 
@@ -51,6 +55,8 @@ ul {
 
 button.MuiButtonBase-root:active {
   -webkit-transform: none;
+      -ms-transform: none;
+       -o-transform: none;
           transform: none;
 }
 
@@ -75,6 +81,9 @@ button.MuiButtonBase-root:active {
   width: 80%;
   margin: auto;
   padding: 60px;
+  border-radius: 15px;
+  -webkit-box-shadow: 0px 5px 15px #ccc;
+          box-shadow: 0px 5px 15px #ccc;
 }
 
 @media (max-width: 900px) {
@@ -85,14 +94,8 @@ button.MuiButtonBase-root:active {
 }
 
 .content-wrapper p {
-  margin-top: 30px;
+  margin-top: 15px;
   font-size: 20px;
-}
-
-@media (max-width: 900px) {
-  .content-wrapper p {
-    font-size: 15px;
-  }
 }
 
 .content-wrapper p ol {
@@ -114,4 +117,3 @@ button.MuiButtonBase-root:active {
   text-decoration: none;
   border-radius: 10px;
 }
-/*# sourceMappingURL=rules.css.map */
