--- a/client/src/assests/css/sass/rules.scss
+++ b/client/src/assests/css/sass/rules.scss
@@ -9,7 +9,7 @@
     font-weight: 600;
     font-size: 5.5rem;
     color: #0c3970;
-  
+
     @media (max-width: 750px) {
       font-size: 4rem;
       padding: 0.8rem 0.2rem 2.2rem 0.2rem;
@@ -20,8 +20,10 @@
 .content-wrapper {
   background-color: #fff;
   width: 80%;
-  margin: auto; 
+  margin: auto;
   padding: 60px;
+  border-radius: 15px;
+  box-shadow: 0px 5px 15px #ccc;
 
   @media (max-width: 900px) {
     width: 98%;
@@ -29,12 +31,8 @@
   }
 
   p {
-    margin-top: 30px;
+    margin-top: 15px;
     font-size: 20px;
-
-    @media (max-width: 900px) {
-      font-size: 15px;
-    }
 
     ol {
       padding: 20px 0;
@@ -53,6 +51,5 @@
       text-decoration: none;
       border-radius: 10px;
     }
-  
   }
 }
