--- a/client/src/assests/css/home.css
+++ b/client/src/assests/css/home.css
@@ -28,15 +28,11 @@ li {
 
 button:focus {
   -webkit-transform: translateY(0px);
-      -ms-transform: translateY(0px);
-       -o-transform: translateY(0px);
           transform: translateY(0px);
 }
 
 button:active {
   -webkit-transform: translateY(3px);
-      -ms-transform: translateY(3px);
-       -o-transform: translateY(3px);
           transform: translateY(3px);
 }
 
@@ -55,8 +51,6 @@ ul {
 
 button.MuiButtonBase-root:active {
   -webkit-transform: none;
-      -ms-transform: none;
-       -o-transform: none;
           transform: none;
 }
 
@@ -67,11 +61,8 @@ button.MuiButtonBase-root:active {
 .Home__navbar {
   min-height: 100vh;
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url(../images/icpc_img1.jpg);
-  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/icpc_img1.jpg);
-  background: -o-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/icpc_img1.jpg);
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/icpc_img1.jpg);
-  -webkit-background-size: cover;
-          background-size: cover;
+  background-size: cover;
   background-repeat: no-repeat;
   background-position: top;
 }
@@ -168,12 +159,10 @@ button.MuiButtonBase-root:active {
 @media (max-width: 700px) {
   .Home_banner_button {
     display: -webkit-box;
-    display: -webkit-flex;
     display: -ms-flexbox;
     display: flex;
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
   }
@@ -185,11 +174,9 @@ button.MuiButtonBase-root:active {
 
 .Home__banner_countdown {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
   margin-bottom: 4.3rem;
@@ -204,17 +191,14 @@ button.MuiButtonBase-root:active {
   width: 16rem;
   margin: 0.5rem 2rem;
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   border-radius: 50%;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
   -webkit-box-pack: center;
-  -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
   background: #fff;
@@ -280,36 +264,29 @@ button.MuiButtonBase-root:active {
   margin: 1rem auto;
   padding: 1rem;
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: center;
-  -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
-  -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   padding-bottom: 2rem;
 }
 
 .sponsors .sponsor_img {
   width: 20%;
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-orient: vertical;
   -webkit-box-direction: normal;
-  -webkit-flex-direction: column;
       -ms-flex-direction: column;
           flex-direction: column;
   -webkit-box-pack: center;
-  -webkit-justify-content: center;
       -ms-flex-pack: center;
           justify-content: center;
   -webkit-box-align: center;
-  -webkit-align-items: center;
       -ms-flex-align: center;
           align-items: center;
   padding: 1rem;
@@ -385,12 +362,9 @@ button.MuiButtonBase-root:active {
 
 .importantInfosWrappers {
   background: -webkit-gradient(linear, left top, left bottom, from(rgba(0, 0, 0, 0.5)), to(rgba(0, 0, 0, 0.5))), url(../images/importantLinks.jpg);
-  background: -webkit-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/importantLinks.jpg);
-  background: -o-linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/importantLinks.jpg);
   background: linear-gradient(rgba(0, 0, 0, 0.5), rgba(0, 0, 0, 0.5)), url(../images/importantLinks.jpg);
   background-repeat: no-repeat;
-  -webkit-background-size: cover;
-          background-size: cover;
+  background-size: cover;
   padding: 3rem 1rem;
   position: relative;
 }
@@ -426,14 +400,11 @@ button.MuiButtonBase-root:active {
 
 .important_infos {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
-  -webkit-flex-wrap: wrap;
-      -ms-flex-wrap: wrap;
-          flex-wrap: wrap;
+  -ms-flex-wrap: wrap;
+      flex-wrap: wrap;
   -webkit-box-pack: justify;
-  -webkit-justify-content: space-between;
       -ms-flex-pack: justify;
           justify-content: space-between;
   width: 75%;
@@ -456,7 +427,6 @@ button.MuiButtonBase-root:active {
 @media (max-width: 700px) {
   .important_infos {
     -webkit-box-pack: center;
-    -webkit-justify-content: center;
         -ms-flex-pack: center;
             justify-content: center;
   }
@@ -592,11 +562,9 @@ button.MuiButtonBase-root:active {
 
 .organizer_info {
   display: -webkit-box;
-  display: -webkit-flex;
   display: -ms-flexbox;
   display: flex;
   -webkit-box-pack: space-evenly;
-  -webkit-justify-content: space-evenly;
       -ms-flex-pack: space-evenly;
           justify-content: space-evenly;
   padding-top: 2rem;
@@ -606,7 +574,6 @@ button.MuiButtonBase-root:active {
   .organizer_info {
     -webkit-box-orient: vertical;
     -webkit-box-direction: normal;
-    -webkit-flex-direction: column;
         -ms-flex-direction: column;
             flex-direction: column;
     padding-top: 1.2rem;
@@ -615,10 +582,9 @@ button.MuiButtonBase-root:active {
 
 .organizer_info_left {
   width: 60%;
-  -webkit-align-self: center;
-      -ms-flex-item-align: center;
-              -ms-grid-row-align: center;
-          align-self: center;
+  -ms-flex-item-align: center;
+      -ms-grid-row-align: center;
+      align-self: center;
   margin: 0.4rem 0rem 1rem 1rem;
 }
 
@@ -655,8 +621,6 @@ button.MuiButtonBase-root:active {
   color: #575757;
   letter-spacing: 1px;
   background-image: -webkit-gradient(linear, left top, right top, from(#7ed56f), to(#28b485));
-  background-image: -webkit-linear-gradient(left, #7ed56f, #28b485);
-  background-image: -o-linear-gradient(left, #7ed56f, #28b485);
   background-image: linear-gradient(to right, #7ed56f, #28b485);
   -webkit-background-clip: text;
   color: transparent;
@@ -725,7 +689,6 @@ button.MuiButtonBase-root:active {
   padding: 3px;
   padding-left: 5px;
   -webkit-transition: all 0.2s;
-  -o-transition: all 0.2s;
   transition: all 0.2s;
 }
 
@@ -759,7 +722,6 @@ button.MuiButtonBase-root:active {
           box-shadow: 0 1.5rem 4rem rgba(0, 0, 0, 0.4);
   z-index: 10;
   -webkit-transition: all 0.2s;
-  -o-transition: all 0.2s;
   transition: all 0.2s;
   outline-offset: 2rem;
   cursor: pointer;
@@ -777,8 +739,6 @@ button.MuiButtonBase-root:active {
 .organizer_info_right img:hover {
   outline: 1.5rem solid #0c3970;
   -webkit-transform: scale(1.05);
-      -ms-transform: scale(1.05);
-       -o-transform: scale(1.05);
           transform: scale(1.05);
   -webkit-box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
           box-shadow: 0 2.5rem 4rem rgba(0, 0, 0, 0.5);
@@ -789,8 +749,6 @@ button.MuiButtonBase-root:active {
   left: 0;
   top: 0;
   -webkit-transform: translate(-20px, -10px);
-      -ms-transform: translate(-20px, -10px);
-       -o-transform: translate(-20px, -10px);
           transform: translate(-20px, -10px);
 }
 
@@ -798,8 +756,6 @@ button.MuiButtonBase-root:active {
   left: 0;
   top: 0;
   -webkit-transform: translate(210px, 40px);
-      -ms-transform: translate(210px, 40px);
-       -o-transform: translate(210px, 40px);
           transform: translate(210px, 40px);
 }
 
@@ -807,8 +763,6 @@ button.MuiButtonBase-root:active {
   left: 0;
   top: 0;
   -webkit-transform: translate(80px, 120px);
-      -ms-transform: translate(80px, 120px);
-       -o-transform: translate(80px, 120px);
           transform: translate(80px, 120px);
 }
 
@@ -825,3 +779,4 @@ button.MuiButtonBase-root:active {
   background-color: 'red';
   color: white;
 }
+/*# sourceMappingURL=home.css.map */
