--- a/client/src/assests/css/rules.css
+++ b/client/src/assests/css/rules.css
@@ -28,11 +28,15 @@ li {
 
 button:focus {
   -webkit-transform: translateY(0px);
+      -ms-transform: translateY(0px);
+       -o-transform: translateY(0px);
           transform: translateY(0px);
 }
 
 button:active {
   -webkit-transform: translateY(3px);
+      -ms-transform: translateY(3px);
+       -o-transform: translateY(3px);
           transform: translateY(3px);
 }
 
@@ -51,6 +55,8 @@ ul {
 
 button.MuiButtonBase-root:active {
   -webkit-transform: none;
+      -ms-transform: none;
+       -o-transform: none;
           transform: none;
 }
 
@@ -111,4 +117,20 @@ button.MuiButtonBase-root:active {
   text-decoration: none;
   border-radius: 10px;
 }
-/*# sourceMappingURL=rules.css.map */
+
+.side {
+  padding: 50px 100px;
+}
+
+@media (max-width: 900px) {
+  .side {
+    width: 98%;
+    padding: 10px;
+  }
+  .side h2 {
+    font-size: 20px;
+  }
+  .side p {
+    font-size: 15px;
+  }
+}
