--- a/client/src/assests/css/sass/home.scss
+++ b/client/src/assests/css/sass/home.scss
@@ -178,7 +178,8 @@
   flex-wrap: wrap;
   padding-bottom: 2rem;
   .sponsor_img {
-    width: 20%;
+    width: 25%;
+    padding-bottom: 5px;
 
     @media (max-width: 750px) {
       width: 25%;
@@ -199,6 +200,16 @@
       margin-bottom: 1.5rem;
       &:not(:first-child) {
         margin-left: 1rem;
+      }
+
+      &.special {
+        width: auto;
+        height: 50px;
+
+        @media (max-width: 500px) {
+          width: 100%;
+          height: auto;
+        }
       }
     }
   }
